--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "RESTFull_API",
   "dependencies": {
     "expres": "^0.0.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.14.3"
   },
   "repository": {
     "type": "git",
